@@ -78,6 +78,7 @@ Current:
     patch #9966: Add JTAGICE3 in UPDI mode
     patch #9963: UsbAsp 3 MHz patch for UsbAsp-flash firmware
     patch #9816: Implement new programmer type: linuxspi
+    patch #9811: ATmega328pb has efuse bit 3
 
   * Internals:
     - New avrdude.conf keyword "family_id", used to verify SIB attributes
